[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
tui-input = { version = "0.12.1", features = ["ratatui-crossterm"]}
ratatui = { version = "0.30.0-alpha.2", features = [ "crossterm" ] }
color-eyre = "0.6.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
directories = "6.0.0"
